--- a/sds.portal.bom/Views/Shared/_Layout.cshtml
+++ b/sds.portal.bom/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Depot Import Requests", "DepotRequestIndex", "FormulaImportRequest")</li>
-                    <li>@Html.ActionLink("BOM Import Requests", "BOMRequestIndex", "FormulaImportRequest")</li>
+                    <!-- <li>@Html.ActionLink("Depot Import Requests", "DepotRequestIndex", "FormulaImportRequest")</li> -->
+                    <li>@Html.ActionLink("BOM Import Requests", "BOMRequestIndex", "BOMRequest")</li>
                     <li>@Html.ActionLink("About", "About", "AppMenus")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "AppMenus")</li>
                 </ul>
