changes for PN materials

--- a/sds.portal.bom/Content/CustomCss/sdssupport.css
+++ b/sds.portal.bom/Content/CustomCss/sdssupport.css
@@ -1,6 +1,11 @@
 ﻿body {
 }
 
+.bom_entry_input_text {
+    width: 800px;
+    color: darkgreen;
+}
+
 .hintlabel {
     font-size: smaller;
     /*font-weight:lighter;*/
